<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="options_menu">Options Menu</string>
    <string name="new_task">New task</string>
    <string name="menu">Menu</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="task_list">Task list</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task">Delete task</string>
    <string name="details_task">Details task</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_out">Sign out</string>
    <string name="history">History</string>
    <string name="my_tasks">My Tasks</string>
    <string name="restore_task">Restore task</string>
    <string name="prior">Prior</string>
    <string name="finished">Finished</string>

</resources>